# pilates

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  perf-budgets.yml
bench/: RESULTS.md  check-budgets.ts  index.ts  thresholds.json
bench/scenarios/: big.ts  hot-relayout-boundary.ts  hot-relayout-text.ts  hot-relayout.ts  hot-structural.ts  huge.ts  realistic.ts  stress.ts  tiny.ts
docs/: ARCHITECTURE.md  RECORDING_DEMO.md  STRATEGY.md
docs/announcements/: 2026-05-09-faster-than-yoga.md  launch-day.md
e2e/: README.md  counter.test.tsx  dashboard.test.tsx  helpers.ts  modal.test.tsx  package.json  scroll-view.test.tsx  smoke.test.ts  text-input-emoji.test.tsx  tsconfig.json  wizard.test.tsx
examples/chat-log/: README.md  index.ts  package.json
examples/dashboard/: README.md  index.ts  package.json
examples/gallery/: README.md  index.ts  package.json
examples/modal/: README.md  index.ts  package.json
examples/progress-table/: README.md  index.ts  package.json
examples/react-build-dashboard/: README.md  index.tsx  package.json
examples/react-counter/: README.md  index.tsx  package.json
placeholder/pilates-py/: LICENSE  README.md  pyproject.toml
placeholder/pilates-py/src/pilates/: __init__.py
tools/: generate-unicode-tables.ts
(+44 files in other folders)
