[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pilates"
version = "0.0.1a0"
description = "Reserved name. Pilates is a flex layout engine for terminal UIs; the implementation lives in the JavaScript ecosystem under the @pilates npm scope."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Pilates contributors" }]
keywords = ["pilates", "terminal", "tui", "cli", "layout", "flexbox", "placeholder"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/pilatesjs/pilates"
Repository = "https://github.com/pilatesjs/pilates"
Issues = "https://github.com/pilatesjs/pilates/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pilates"]

[tool.hatch.build.targets.sdist]
include = ["src/pilates", "README.md", "LICENSE", "pyproject.toml"]
